--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
     "style-loader": "^3.3.1",
     "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2"
+  },
+  "dependencies": {
+    "uuid": "^9.0.0"
   }
 }
