--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "@babel/preset-env": "^7.22.9",
     "babel-jest": "^29.6.1",
     "css-loader": "^6.7.1",
-    "eslint": "^8.14.0",
+    "eslint": "^8.45.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.26.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-import": "^2.27.5",
     "jest": "^29.6.1",
+    "prettier": "3.0.0",
     "style-loader": "^3.3.1",
     "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2"
